--- a/package.json
+++ b/package.json
@@ -10,15 +10,29 @@
     "test": "npm run lint && npm run build"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.11.2",
+    "@cloudinary/url-gen": "^1.11.2",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@next/font": "13.4.6",
+    "axios": "^1.5.0",
+    "cloudinary": "^1.41.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.0.7",
+    "framer-motion": "^10.16.4",
+    "imagemin": "^8.0.1",
+    "imagemin-jpegtran": "^7.0.0",
     "next": "13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "replicate": "^0.12.3"
+    "react-hooks-global-state": "^2.1.0",
+    "react-swipeable": "^7.0.1",
+    "react-use-keypress": "^1.3.1",
+    "replicate": "^0.14.1",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.6",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.2"
